--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -45,7 +45,7 @@
             <div class="three wide column">
                 <div class="ui inverted link list">
                     <div class="item">
-                        <img class="ui rounded image" th:src="@{/static/images/alarm.png}" alt="" style="width: 100px">
+                        <img class="ui rounded image" th:src="@{images/wechat.png}" alt="" style="width: 100px">
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
         </div>
         <div class="ui inverted section divider"></div>
         <p class="m-text-lined m-text-spaced m-text-thin">
-            Copyright © 2020
+            粤ICP备2020102794号
         </p>
     </div>
 </footer>
