--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -52,7 +52,7 @@
     </div>
     <br><br><br>
     <footer th:replace="admin/_fragments :: footer"></footer>
-    <script th:replace="admin/_fragments :: script"></script>
+    <th:block th:replace="admin/_fragments :: script"></th:block>
 <script>
     $('.ui.form').form({
         fields : {
