--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -64,9 +64,7 @@
 </div>
 
 
-<!-- 底部 -->
-<footer th:replace="admin/_fragments :: footer"></footer>
-<script th:replace="admin/_fragments :: script"></script>
+<th:block th:replace="admin/_fragments :: script"></th:block>
 
 <!-- 此处Bug还未处理 -->
 <script>
