--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -138,19 +138,10 @@
 
 	</div>
 </div>
-
 <br>
 <br>
 <!--底部footer-->
-<footer th:replace="admin/_fragments :: footer" >
-
-</footer>
-
-<th:block th:replace="admin/_fragments :: script">
-
-</th:block>
-
-
+<th:block th:replace="admin/_fragments :: script"></th:block>
 <script>
 
 	//初始化Markdown编辑器
