--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -61,9 +61,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- 底部 -->
-	<footer th:replace="admin/_fragments :: footer"></footer>
-	<script th:replace="admin/_fragments :: script"></script>
+	<th:block th:replace="admin/_fragments :: script"></th:block>
 <!-- 此处Bug还未处理 -->
 <script>
 	$('.menu.toggle').click(function (){
