--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -564,9 +564,7 @@ h5,h6{font-size:1em;}
 <br>
 
 <!--底部footer-->
-<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
-
-</footer>
+    <footer th:replace="_fragments :: footer"></footer>
 
 <!--导入的script-->
 <th:block th:replace="_fragments :: script">
