--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -80,9 +80,7 @@
   <br>
 
   <!--底部footer-->
-  <footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
-
-  </footer>
+  <footer th:replace="_fragments :: footer"></footer>
 
   <!--导入的script-->
   <th:block th:replace="_fragments :: script">
