--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -100,16 +100,9 @@
 <br>
 <br>
 
-<!--底部footer-->
-<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
 
-</footer>
-
-<!--导入的script-->
-<th:block th:replace="_fragments :: script">
-
-</th:block>
-
+    <th:block th:replace="_fragments :: script"></th:block>
+    <footer th:replace="_fragments :: footer"></footer>
 <script>
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
