--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -70,7 +70,7 @@
 								<td th:text="${#dates.format(blog.updateTime, 'yyyy-MM-dd')}">2017-10-05 09：25</td>
 								<td>
 									<a href="#" th:href="@{/admin/blogs/{id}/input(id=${blog.id})}" class="ui mini teal button">编辑</a>
-									<a href="#" th:href="@{/admin/blogs/{id}/delete(id=${blog.id})}" class="ui mini red button">删除</a>
+									<a href="#" th:href="@{/admin/blogs/{id}/delete(id=${blog.id})}" class="ui mini red button" onclick="return confirm('确定要删除吗？')">删除</a>
 								</td>
 							</tr>
 						</tbody>
