--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -11,27 +11,9 @@
 <nav th:replace="_fragments :: menu(0)" ></nav>
 
 <!--中间内容-->
-<div id="waypoint" class="m-container-small m-padded-tb-big animated fadeIn">
+<div id="waypoint" class="m-margin- m-padded-tb-big animated fadeIn">
     <div class="ui container">
         <!--头部-->
-        <div class="ui top attached segment">
-            <div class="ui horizontal link list">
-                <div class="item">
-                    <img src="../static/images/bg1.jpeg" th:src="@{${blog.user.avatar}}" alt="" class="ui avatar image">
-                    <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}">李仁密</a></div>
-                </div>
-                <div class="item">
-                    <i class="calendar icon"></i> <span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2017-10-01</span>
-                </div>
-                <div class="item">
-                    <i class="eye icon"></i> <span th:text="${blog.views}">2342</span>
-                </div>
-            </div>
-        </div>
-        <div class="ui attached segment">
-            <!--图片区域-->
-            <img src="../static/images/bg1.jpeg" th:src="@{${blog.firstPicture}}" alt="" class="ui fluid rounded image">
-        </div>
         <div class="ui  attached padded segment">
             <!--内容-->
             <div class="ui right aligned basic segment">
